fixed links overflowing

--- a/themes/minimalbp/static/css/style.css
+++ b/themes/minimalbp/static/css/style.css
@@ -108,6 +108,11 @@ a {
     color: var(--accent);
     text-decoration: none;
     padding: 0.25rem;
+    white-space: pre-wrap; /* CSS3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */ 
 }
 a:hover,
 .footer > p > a:hover {
